--- a/src/App.css
+++ b/src/App.css
@@ -1,86 +1,183 @@
 /* HOME PAGE */
 .home-header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: black;
-    width: 100%;
-    height: 95vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  width: 100%;
+  height: 95vh;
 }
 
 .home-header .home-left {
-    width: 40%;
-    height: 80%;
-    border: 3px solid whitesmoke;
-    border-radius: 50%;
+  width: 40%;
+  height: 80%;
+  border: 3px solid whitesmoke;
+  border-radius: 50%;
 }
 
 .home-header .home-right {
-    background-color: whitesmoke;
-    width: 30%;
-    height: 60%;
-    border-radius: 50%;
-    /* border: 6px solid red; */
-    margin-left: -150px;
-    padding: 50px;
+  background-color: whitesmoke;
+  width: 30%;
+  height: 60%;
+  border-radius: 50%;
+  /* border: 6px solid red; */
+  margin-left: -150px;
+  padding: 50px;
 }
 
-.home-header .home-right h1{
-    text-align: center;
-    font-family: 'Philosopher', sans-serif;
-    font-size: 32px;
-    color: #A22C4E;
+.home-header .home-right h1 {
+  text-align: center;
+  font-family: "Philosopher", sans-serif;
+  font-size: 32px;
+  color: #a22c4e;
 }
 
 .home-header .home-right h4 {
-    padding-top: 4px;
-    text-align: center;
-    font-family: 'Philosopher', sans-serif;
-    font-size: 22px;
+  padding-top: 4px;
+  text-align: center;
+  font-family: "Philosopher", sans-serif;
+  font-size: 22px;
 }
 
 .home-header .home-right p {
-    padding-top: 8px;
-    text-align: center;
-    font-size: 16px;
-    font-weight: 100;
+  padding-top: 8px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 100;
 }
 
 .home-content1 {
-    display: flex;
-    width: 100%;
-    height: 70vh;
+  display: flex;
+  width: 100%;
+  height: 70vh;
 }
 
 .home-content1 .content1-left {
-    width: 50%;
-    height: 100%;
-    padding: 30px;
+  width: 50%;
+  height: 100%;
+  padding: 30px;
 }
 
 .home-content1 .content1-left h1 {
-    font-family: 'Philosopher', sans-serif;
-    font-size: 30px;
+  font-family: "Philosopher", sans-serif;
+  font-size: 30px;
 }
 
 .home-content1 .content1-left hr {
-    width: 90%;
-    height: 2px;
-    border: none;
-    margin: 10px 0;
-    background-color: #A22C4E;
+  width: 90%;
+  height: 2px;
+  border: none;
+  margin: 10px 0;
+  background-color: #a22c4e;
 }
 
 .home-content1 .content1-left p {
-    padding-top: 8px;
-    font-size: 15px;
-    font-weight: 300;
+  padding-top: 8px;
+  font-size: 15px;
+  font-weight: 300;
 }
 
 .home-content1 .content1-right {
-    margin: 50px 100px;
-    width: 30%;
-    height: 80%;
+  margin: 50px 100px;
+  width: 30%;
+  height: 80%;
+  border-radius: 50%;
+  background-color: black;
+}
+
+/* CAROUSEL */
+.carousel-item {
+    display: flex;
+}
+
+.item-content {
+    display: flex;
+    /* margin: 80px; */
+    margin-top: 100px;
+    margin-left: 100px;
+}
+
+.circular-div, .circular-div2 {
+    width: 400px;
+    height: 400px;
     border-radius: 50%;
-    background-color: black;
+    /* background-color: #3498db; */
+    margin-right: 100px;
+    border: 8px solid;
+    border-bottom-color: #004C65;
+    border-left-color: #7298A7;
+    border-top-color: #366E83;
+    border-right-color: white;
+}
+
+.circular-div2 {
+    background-color: #a22c4e;
+}
+
+.text-div {
+    max-width: 400px;
+    margin-top: 30px;
+}
+
+.text-div h2 {
+    font-family: "Philosopher", sans-serif;
+    font-size:30px;
+}
+
+.text-div hr {
+    width: 90%;
+    height: 2px;
+    border: none;
+    margin: 5px 0;
+    background-color: #a22c4e;
+}
+
+.text-div p {
+    padding-top: 8px;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+/* HOME ICONS */
+.home-icons {
+    display: flex;
+    width: 100%;
+    padding: 120px;
+}
+
+.home-icons div:nth-child(1) {
+    width: 25%;
+    /* background-color: crimson; */
+}
+
+.home-icons div:nth-child(2) {
+    width: 25%;
+    /* background-color: yellow; */
+}
+
+.home-icons div:nth-child(3) {
+    width: 25%;
+    /* background-color: #7298A7; */
+}
+
+.home-icons div:nth-child(4) {
+    width: 25%;
+    /* background-color: #a22c4e; */
+}
+
+.home-icons img {
+    width: 50%;
+    margin-left: 80px;
+}
+
+.home-icons h3 {
+    margin-top: 4px;
+    /* font-family: "Philosopher", sans-serif; */
+    font-size: 18px;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.home-icons h3:nth-child(1), .home-icons h3:nth-child(2) {
+    padding-left: 30px;
 }
