--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 /* HOME PAGE */
-.home-header {
+.home-header, .about-header {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,24 +8,24 @@
   height: 95vh;
 }
 
-.home-header .home-left {
+.home-header .home-left, .about-header .about-left {
   width: 40%;
   height: 80%;
   border: 3px solid whitesmoke;
   border-radius: 50%;
+  border-right-color: black;
 }
 
-.home-header .home-right {
+.home-header .home-right, .about-header .about-right {
   background-color: whitesmoke;
   width: 30%;
   height: 60%;
   border-radius: 50%;
-  /* border: 6px solid red; */
   margin-left: -150px;
   padding: 50px;
 }
 
-.home-header .home-right h1 {
+.home-header .home-right, .about-header .about-right h1 {
   text-align: center;
   font-family: "Philosopher", sans-serif;
   font-size: 32px;
@@ -92,7 +92,6 @@
 
 .item-content {
     display: flex;
-    /* margin: 80px; */
     margin-top: 100px;
     margin-left: 100px;
 }
@@ -101,7 +100,6 @@
     width: 400px;
     height: 400px;
     border-radius: 50%;
-    /* background-color: #3498db; */
     margin-right: 100px;
     border: 8px solid;
     border-bottom-color: #004C65;
@@ -147,22 +145,18 @@
 
 .home-icons div:nth-child(1) {
     width: 25%;
-    /* background-color: crimson; */
 }
 
 .home-icons div:nth-child(2) {
     width: 25%;
-    /* background-color: yellow; */
 }
 
 .home-icons div:nth-child(3) {
     width: 25%;
-    /* background-color: #7298A7; */
 }
 
 .home-icons div:nth-child(4) {
     width: 25%;
-    /* background-color: #a22c4e; */
 }
 
 .home-icons img {
@@ -172,7 +166,6 @@
 
 .home-icons h3 {
     margin-top: 4px;
-    /* font-family: "Philosopher", sans-serif; */
     font-size: 18px;
     text-align: center;
     text-transform: uppercase;
@@ -180,4 +173,73 @@
 
 .home-icons h3:nth-child(1), .home-icons h3:nth-child(2) {
     padding-left: 30px;
+}
+
+
+/* ABOUT PAGE */
+.about-header .about-right h1 {
+  padding: 52px;
+}
+
+.about-principal h1 {
+  font-family: "Philosopher", sans-serif;
+  font-size: 36px;
+  padding: 35px;
+  padding-bottom: 0;
+}
+
+.about-principal hr {
+  width: 10%;
+  height: 10px;
+  border: none;
+  margin-left: 25px;
+  background-color: #0095C8;
+}
+
+.principal-container {
+  display: flex;
+  width: 100%;
+  height: 80vh;
+}
+
+.about-principal .principal-left {
+  width: 30%;
+  height: 70%;
+  margin: 25px 150px;
+  border-radius: 50%;
+  background-color: #004C65;
+}
+
+.about-principal .principal-right {
+  width: 50%;
+  height: 100%;
+}
+
+.about-principal .principal-right p {
+  padding: 20px;
+  padding-left: 0;
+  margin-left: -50px;
+  font-size: 17px;
+}
+
+.about-principal .principal-right h2 {
+  margin-left: -50px;
+  padding-bottom: 20px;
+  font-size: x-large;
+  font-weight: bold;
+}
+
+.about-principal .principal-right span {
+  font-weight: 200;
+  font-size: small;
+}
+
+.about-principal .principal-right button {
+  padding: 10px 14px;
+  margin-left: -50px;
+  border-radius: 20px;
+  background-color: #004C65;
+  text-align: center;
+  font-weight: 300;
+  color: white;
 }
