--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 /* HOME PAGE */
-.home-header, .about-header {
+.home-header,
+.about-header,
+.curriculumn-header {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,7 +10,9 @@
   height: 95vh;
 }
 
-.home-header .home-left, .about-header .about-left {
+.home-header .home-left,
+.about-header .about-left,
+.curriculumn-header .curriculumn-left {
   width: 40%;
   height: 80%;
   border: 3px solid whitesmoke;
@@ -16,7 +20,9 @@
   border-right-color: black;
 }
 
-.home-header .home-right, .about-header .about-right {
+.home-header .home-right,
+.about-header .about-right,
+.curriculumn-header .curriculumn-right {
   background-color: whitesmoke;
   width: 30%;
   height: 60%;
@@ -25,7 +31,9 @@
   padding: 50px;
 }
 
-.home-header .home-right, .about-header .about-right h1 {
+.home-header .home-right,
+.about-header .about-right,
+.curriculumn-header .curriculumn-right h1 {
   text-align: center;
   font-family: "Philosopher", sans-serif;
   font-size: 32px;
@@ -87,94 +95,95 @@
 
 /* CAROUSEL */
 .carousel-item {
-    display: flex;
+  display: flex;
 }
 
 .item-content {
-    display: flex;
-    margin-top: 100px;
-    margin-left: 100px;
+  display: flex;
+  margin-top: 100px;
+  margin-left: 100px;
 }
 
-.circular-div, .circular-div2 {
-    width: 400px;
-    height: 400px;
-    border-radius: 50%;
-    margin-right: 100px;
-    border: 8px solid;
-    border-bottom-color: #004C65;
-    border-left-color: #7298A7;
-    border-top-color: #366E83;
-    border-right-color: white;
+.circular-div,
+.circular-div2 {
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  margin-right: 100px;
+  border: 8px solid;
+  border-bottom-color: #004c65;
+  border-left-color: #7298a7;
+  border-top-color: #366e83;
+  border-right-color: white;
 }
 
 .circular-div2 {
-    background-color: #a22c4e;
+  background-color: #a22c4e;
 }
 
 .text-div {
-    max-width: 400px;
-    margin-top: 30px;
+  max-width: 400px;
+  margin-top: 30px;
 }
 
 .text-div h2 {
-    font-family: "Philosopher", sans-serif;
-    font-size:30px;
+  font-family: "Philosopher", sans-serif;
+  font-size: 30px;
 }
 
 .text-div hr {
-    width: 90%;
-    height: 2px;
-    border: none;
-    margin: 5px 0;
-    background-color: #a22c4e;
+  width: 90%;
+  height: 2px;
+  border: none;
+  margin: 5px 0;
+  background-color: #a22c4e;
 }
 
 .text-div p {
-    padding-top: 8px;
-    font-size: 16px;
-    font-weight: 300;
+  padding-top: 8px;
+  font-size: 16px;
+  font-weight: 300;
 }
 
 /* HOME ICONS */
 .home-icons {
-    display: flex;
-    width: 100%;
-    padding: 120px;
+  display: flex;
+  width: 100%;
+  padding: 120px;
 }
 
 .home-icons div:nth-child(1) {
-    width: 25%;
+  width: 25%;
 }
 
 .home-icons div:nth-child(2) {
-    width: 25%;
+  width: 25%;
 }
 
 .home-icons div:nth-child(3) {
-    width: 25%;
+  width: 25%;
 }
 
 .home-icons div:nth-child(4) {
-    width: 25%;
+  width: 25%;
 }
 
 .home-icons img {
-    width: 50%;
-    margin-left: 80px;
+  width: 50%;
+  margin-left: 80px;
 }
 
 .home-icons h3 {
-    margin-top: 4px;
-    font-size: 18px;
-    text-align: center;
-    text-transform: uppercase;
+  margin-top: 4px;
+  font-size: 18px;
+  text-align: center;
+  text-transform: uppercase;
 }
 
-.home-icons h3:nth-child(1), .home-icons h3:nth-child(2) {
-    padding-left: 30px;
+.home-icons h3:nth-child(1),
+.home-icons h3:nth-child(2) {
+  padding-left: 30px;
 }
-
 
 /* ABOUT PAGE */
 .about-header .about-right h1 {
@@ -190,10 +199,10 @@
 
 .about-principal hr {
   width: 10%;
-  height: 10px;
+  height: 5px;
   border: none;
   margin-left: 25px;
-  background-color: #0095C8;
+  background-color: #0095c8;
 }
 
 .principal-container {
@@ -207,7 +216,7 @@
   height: 70%;
   margin: 25px 150px;
   border-radius: 50%;
-  background-color: #004C65;
+  background-color: #004c65;
 }
 
 .about-principal .principal-right {
@@ -238,8 +247,212 @@
   padding: 10px 14px;
   margin-left: -50px;
   border-radius: 20px;
-  background-color: #004C65;
+  background-color: #004c65;
   text-align: center;
   font-weight: 300;
   color: white;
+}
+
+.experience-container {
+  display: flex;
+  width: 100%;
+  height: 80vh;
+  padding: 20px;
+}
+
+.experience-left {
+  width: 50%;
+  height: 100%;
+  padding: 30px;
+  padding-top: 0;
+}
+
+.experience-left h2 {
+  font-family: "Philosopher", sans-serif;
+  font-size: 30px;
+}
+
+.experience-right {
+  width: 50%;
+  height: 100%;
+  background-color: #004c65;
+}
+
+.deputy-container {
+  display: flex;
+  width: 100%;
+  height: 60vh;
+  padding: 20px;
+}
+
+.deputy-container .deputy-left {
+  width: 50%;
+  height: 100%;
+  background-color: #0095c8;
+}
+
+.deputy-container .deputy-right {
+  width: 50%;
+  height: 100%;
+  padding: 40px;
+  padding-top: 0;
+}
+
+.deputy-container .deputy-right h2 {
+  font-family: "Philosopher", sans-serif;
+  font-size: 30px;
+}
+
+.deputy-container .deputy-right hr {
+  width: 13%;
+  height: 5px;
+  border: none;
+  background-color: #004c65;
+  margin-bottom: 14px;
+}
+
+.deputy-container .deputy-right span {
+  font-weight: bold;
+  font-size: 19px;
+  color: #366e83;
+}
+
+/* CURRICULUMN PAGE */
+.curriculumn-header .curriculumn-right h1 {
+  font-size: 45px;
+  padding-top: 100px;
+  margin-left: -15px;
+  color: #0095c8;
+}
+
+.junior-container {
+  display: flex;
+  width: 100%;
+  height: 60vh;
+}
+
+.junior-container .junior-left {
+  width: 50%;
+  height: 100%;
+  padding: 30px;
+  margin-left: 50px;
+}
+
+.junior-container .junior-left h2 {
+  font-family: "Philosopher", sans-serif;
+  font-size: 30px;
+  padding-bottom: 10px;
+}
+
+.junior-container .junior-left p {
+  padding: 20px;
+  padding-left: 0;
+  padding-top: 0;
+}
+
+.junior-container .junior-left button {
+  background-color: #0095c8;
+  padding: 12px 15px;
+  text-align: center;
+  font-size: 14px;
+  color: white;
+  border-radius: 30px;
+}
+
+.junior-container .junior-right {
+  width: 30%;
+  height: 90%;
+  margin-top: 50px;
+  margin-left: 80px;
+  border-radius: 50%;
+  border: 10px solid;
+  border-left-color: #feb404;
+  border-right-color: #ffff;
+  border-top-color: #e06287;
+  border-bottom-color: #0095c8;
+}
+
+.senior-container {
+  display: flex;
+  width: 100%;
+  height: 60vh;
+  margin-top: 90px;
+}
+
+.senior-container .senior-left {
+  width: 30%;
+  height: 90%;
+  margin-left: 100px;
+  border-radius: 50%;
+  border: 10px solid;
+  border-left-color: white;
+  border-right-color: #feb404;
+  border-top-color: #0095c8;
+  border-bottom-color: #e06287;
+}
+
+.senior-container .senior-right {
+  width: 50%;
+  height: 100%;
+  padding-top: 0;
+  padding-left: 200px;
+}
+
+.senior-container .senior-right h2 {
+  font-family: "Philosopher", sans-serif;
+  font-size: 30px;
+  padding-bottom: 10px;
+}
+
+.senior-container .senior-right p {
+  padding: 20px;
+  padding-left: 0;
+  padding-top: 0;
+}
+
+.senior-container .senior-right button {
+  background-color: #0095c8;
+  padding: 12px 15px;
+  text-align: center;
+  font-size: 14px;
+  color: white;
+  border-radius: 30px;
+}
+
+.typical-day .h1 {
+  height: 17vh;
+  text-align: center;
+  padding: 15px;
+  font-size: 50px;
+  font-weight: bolder;
+  color: white;
+  background-color: #feb404;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(8, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  height: 70vh;
+}
+
+.grid-item-1 { grid-area: 5 / 1 / 9 / 3; }
+.grid-item-2 { grid-area: 1 / 1 / 5 / 3; }
+.grid-item-3 { grid-area: 5 / 3 / 9 / 5; }
+.grid-item-4 { grid-area: 1 / 3 / 5 / 5; }
+.grid-item-5 { grid-area: 5 / 5 / 9 / 7; }
+.grid-item-6 { grid-area: 1 / 5 / 5 / 7; }
+.grid-item-7 { grid-area: 5 / 7 / 9 / 9; }
+.grid-item-8 { grid-area: 1 / 7 / 5 / 9; }
+
+.grid-item {
+  padding: 30px;
+  text-align: center;
+}
+
+.grid-item h2{
+  font-size: 24px;
+  font-weight: bold;
 }
