--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 /* HOME PAGE */
 .home-header,
 .about-header,
-.curriculumn-header {
+.curriculumn-header,
+.careers-header {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,7 +13,8 @@
 
 .home-header .home-left,
 .about-header .about-left,
-.curriculumn-header .curriculumn-left {
+.curriculumn-header .curriculumn-left,
+.careers-header .careers-left {
   width: 40%;
   height: 80%;
   border: 3px solid whitesmoke;
@@ -22,7 +24,8 @@
 
 .home-header .home-right,
 .about-header .about-right,
-.curriculumn-header .curriculumn-right {
+.curriculumn-header .curriculumn-right,
+.careers-header .careers-right {
   background-color: whitesmoke;
   width: 30%;
   height: 60%;
@@ -438,21 +441,175 @@
   height: 70vh;
 }
 
-.grid-item-1 { grid-area: 5 / 1 / 9 / 3; }
-.grid-item-2 { grid-area: 1 / 1 / 5 / 3; }
-.grid-item-3 { grid-area: 5 / 3 / 9 / 5; }
-.grid-item-4 { grid-area: 1 / 3 / 5 / 5; }
-.grid-item-5 { grid-area: 5 / 5 / 9 / 7; }
-.grid-item-6 { grid-area: 1 / 5 / 5 / 7; }
-.grid-item-7 { grid-area: 5 / 7 / 9 / 9; }
-.grid-item-8 { grid-area: 1 / 7 / 5 / 9; }
+.grid-item-1 {
+  grid-area: 5 / 1 / 9 / 3;
+}
+.grid-item-2 {
+  grid-area: 1 / 1 / 5 / 3;
+}
+.grid-item-3 {
+  grid-area: 5 / 3 / 9 / 5;
+}
+.grid-item-4 {
+  grid-area: 1 / 3 / 5 / 5;
+}
+.grid-item-5 {
+  grid-area: 5 / 5 / 9 / 7;
+}
+.grid-item-6 {
+  grid-area: 1 / 5 / 5 / 7;
+}
+.grid-item-7 {
+  grid-area: 5 / 7 / 9 / 9;
+}
+.grid-item-8 {
+  grid-area: 1 / 7 / 5 / 9;
+}
 
 .grid-item {
   padding: 30px;
   text-align: center;
 }
 
-.grid-item h2{
+.grid-item h2 {
   font-size: 24px;
   font-weight: bold;
+}
+
+/* CAREERS PAGE */
+.careers-header .careers-right h1 {
+  font-family: "Philosopher", sans-serif;
+  font-size: 40px;
+  padding-left: 55px;
+  padding-top: 70px;
+  color: #feb404;
+}
+
+.careers-header .careers-right p {
+  padding-left: 80px;
+}
+
+.millicent-container {
+  display: flex;
+  width: 100%;
+  height: 70vh;
+  background-color: aliceblue;
+}
+
+.millicent-container .millicent-left {
+  width: 30%;
+  height: 80%;
+  border-radius: 50%;
+  margin: 30px;
+  margin-left: 70px;
+  background-color: #0095c8;
+}
+
+.millicent-container .millicent-right {
+  width: 50%;
+  height: 100%;
+  padding: 50px;
+}
+
+.millicent-container .millicent-right h1 {
+  font-family: "Philosopher", sans-serif;
+  font-size: 28px;
+  color: #a22c4e;
+}
+
+.millicent-container .millicent-right span {
+  font-size: 18px;
+  color: #e06287;
+}
+
+.millicent-container .millicent-right p {
+  padding-top: 10px;
+}
+
+.others-container {
+  display: flex;
+  width: 100%;
+  height: 70vh;
+}
+
+.others-container .others-left {
+  display: flex;
+  width: 50%;
+  height: 100%;
+  background-color: #366e83;
+}
+
+.others-container .others-left .others-left-left {
+  width: 50%;
+  height: 100%;
+}
+
+.others-container .others-left .others-left-right {
+  width: 50%;
+  height: 100%;
+  background-color: white;
+  padding: 50px;
+}
+
+.others-container .others-right {
+  display: flex;
+  width: 50%;
+  height: 100%;
+  background-color: #004c65;
+}
+
+.others-container .others-right .others-right-left {
+  width: 50%;
+  height: 100%;
+}
+
+.others-container .others-right .others-right-right {
+  width: 50%;
+  height: 100%;
+  padding: 50px;
+  background-color: white;
+}
+
+.others-container .others-left .others-left-right h2,
+.others-container .others-right .others-right-right h2 {
+  font-family: "Philosopher", sans-serif;
+  font-size: 18px;
+  color: #a22c4e;
+}
+
+.others-container .others-left .others-left-right span,
+.others-container .others-right .others-right-right span {
+  font-size: 14px;
+  color: #e06287;
+}
+
+.others-container .others-left .others-left-right p,
+.others-container .others-right .others-right-right p {
+  padding-top: 10px;
+  font-size: 14px;
+}
+
+.others-container .others-left .others-left-right button,
+.others-container .others-right .others-right-right button {
+  margin-top: 25px;
+  padding: 10px 20px;
+  background-color: #feb404;
+}
+
+.opportunities-container {
+  padding: 250px;
+  padding-top: 30px;
+  padding-bottom: 0;
+  text-align: center;
+  font-size: 18px;
+}
+
+.opportunities-container button {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 10px 30px;
+  text-align: center;
+  font-size: 14px;
+  background-color: #a22c4e;
+  color: white;
 }
