--- a/src/App.css
+++ b/src/App.css
@@ -72,9 +72,9 @@
 .contact-header .contact-left {
   width: 40%;
   height: 80%;
-  border: 3px solid whitesmoke;
+  border: 8px solid rgba(255, 255, 255, 0.5);
   border-radius: 50%;
-  border-right-color: black;
+  border-right-color: transparent;
 }
 
 .home-header .home-right,
@@ -82,7 +82,7 @@
 .curriculumn-header .curriculumn-right,
 .careers-header .careers-right,
 .contact-header .contact-right {
-  background-color: whitesmoke;
+  background-color: rgba(255, 255, 255, 0.7);
   width: 30%;
   height: 60%;
   border-radius: 50%;
@@ -97,6 +97,13 @@
   font-family: "Philosopher", sans-serif;
   font-size: 32px;
   color: #a22c4e;
+}
+
+.home-header {
+  background-image: url('/public/images/home.jpeg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .home-header .home-right h1 {
@@ -147,7 +154,10 @@
   width: 35%;
   height: 80%;
   border-radius: 50%;
-  background-color: black;
+  background-image: url(/public/images/home_welcome.jpeg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 /* CAROUSEL */
@@ -157,25 +167,42 @@
 
 .item-content {
   display: flex;
-  margin-top: 100px;
+  margin-top: 50px;
   margin-left: 100px;
 }
 
-.circular-div,
-.circular-div2 {
-  width: 400px;
-  height: 400px;
+.circular-div {
+  width: 350px;
+  height: 350px;
   border-radius: 50%;
+  margin-left: 100px;
   margin-right: 100px;
   border: 8px solid;
   border-bottom-color: #004c65;
   border-left-color: #7298a7;
   border-top-color: #366e83;
   border-right-color: white;
+  background-image: url(/public/images/home-carousel.jpeg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .circular-div2 {
-  background-color: #a22c4e;
+  width: 350px;
+  height: 350px;
+  border-radius: 50%;
+  margin-left: 100px;
+  margin-right: 100px;
+  border: 8px solid;
+  border-bottom-color: #feb404;
+  border-left-color: #fee7ae;
+  border-right-color: white;
+  border-top-color: #feb404;
+  background-image: url(/public/images/home.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .text-div {
@@ -200,6 +227,65 @@
   padding-top: 8px;
   font-size: 16px;
   font-weight: 300;
+}
+
+.contact-us {
+  height: 50vh;
+  padding-top: 20px;
+  margin-top: 40px;
+  background-color: #004c65;
+  text-align: center;
+  color: whitesmoke;
+}
+
+.contact-us h2 {
+  font-family: "Philosopher", sans-serif;
+  font-size: 40px;
+  padding-top: 22px;
+}
+
+.contact-us hr {
+  width: 70%;
+  height: 2px;
+  border: none;
+  margin: 20px 150px;
+  background-color: white;
+}
+
+.contact-us p {
+  font-weight: 300;
+  font-size: 18px;
+}
+
+.contact-us .contact-us-btn {
+  display: inline-block;
+  padding: 10px 24px;
+  font-size: 14px;
+  background-color: #0095c8;
+  border-radius: 20px;
+  transition: all .3s;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.contact-us .contact-us-btn::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  background-color: #feb404;
+  transition: all .3s;
+  z-index: -1;
+}
+
+.contact-us .contact-us-btn:hover {
+  color: white;
+  &::before {
+    width: 100%;
+  }
 }
 
 /* HOME ICONS */
@@ -243,6 +329,13 @@
 }
 
 /* ABOUT PAGE */
+.about-header {
+  background-image: url(/public/images/about.jpeg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
 .about-header .about-right h1 {
   padding: 52px;
 }
@@ -273,7 +366,10 @@
   height: 70%;
   margin: 25px 150px;
   border-radius: 50%;
-  background-color: #004c65;
+  background-image: url(/public/images/principal.jpeg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .about-principal .principal-right {
@@ -300,8 +396,8 @@
   font-size: small;
 }
 
-.about-principal .principal-right button {
-  padding: 10px 14px;
+.about-principal .principal-right .button {
+  padding: 10px 24px;
   margin-left: -50px;
   border-radius: 20px;
   background-color: #004c65;
@@ -332,20 +428,26 @@
 .experience-right {
   width: 50%;
   height: 100%;
-  background-color: #004c65;
+  background-image: url(/public/images/school.jpeg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .deputy-container {
   display: flex;
   width: 100%;
-  height: 60vh;
+  height: 80vh;
   padding: 20px;
 }
 
 .deputy-container .deputy-left {
   width: 50%;
   height: 100%;
-  background-color: #0095c8;
+  background-image: url(/public/images/deputy.jpeg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .deputy-container .deputy-right {
@@ -375,6 +477,13 @@
 }
 
 /* CURRICULUMN PAGE */
+.curriculumn-header {
+  background-image: url(/public/images/curriculumn.jpeg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
 .curriculumn-header .curriculumn-right h1 {
   font-size: 45px;
   padding-top: 100px;
@@ -427,6 +536,10 @@
   border-right-color: #ffff;
   border-top-color: #e06287;
   border-bottom-color: #0095c8;
+  background-image: url(/public/images/junior.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .senior-container {
@@ -446,6 +559,10 @@
   border-right-color: #feb404;
   border-top-color: #0095c8;
   border-bottom-color: #e06287;
+  background-image: url(/public/images/senior.jpeg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .senior-container .senior-right {
