--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 /* NAV */
 nav {
   width: 100%;
+  justify-content: space-between;
+  padding-right: 1rem;
   background-color: white;
   opacity: 0.8;
 }
@@ -11,7 +13,7 @@ nav {
 }
 
 .text::before {
-  content: "";
+  content: '';
   position: absolute;
   width: 0;
   height: 2px;
@@ -19,6 +21,19 @@ nav {
   left: 0;
   background-color: #feb404;
   transition: width 0.3s ease;
+}
+
+.menu-btn {
+  display: none;
+  font-size: 12px;
+  text-transform: uppercase;
+  color: whitesmoke;
+  background-color: #0095c8;
+  transition: all .3s;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  margin-top: -50px;
+  margin-bottom: 20px;
 }
 
 .text:hover::before {
@@ -31,21 +46,21 @@ nav {
   text-transform: uppercase;
   color: whitesmoke;
   background-color: #0095c8;
-  transition: all 0.3s;
+  transition: all .3s;
   position: relative;
   overflow: hidden;
   z-index: 1;
 }
 
 .contact-btn::before {
-  content: "";
+  content: '';
   position: absolute;
   bottom: 0;
   left: 0;
   width: 0%;
   height: 100%;
   background-color: #feb404;
-  transition: all 0.3s;
+  transition: all .3s;
   z-index: -1;
 }
 
@@ -55,6 +70,7 @@ nav {
     width: 100%;
   }
 }
+
 
 /* HOME PAGE */
 .home-header,
@@ -102,7 +118,7 @@ nav {
 }
 
 .home-header {
-  background-image: url("/public/images/home.jpeg");
+  background-image: url('/public/images/home.jpeg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -257,21 +273,21 @@ nav {
   font-size: 14px;
   background-color: #0095c8;
   border-radius: 20px;
-  transition: all 0.3s;
+  transition: all .3s;
   position: relative;
   overflow: hidden;
   z-index: 1;
 }
 
 .contact-us .contact-us-btn::before {
-  content: "";
+  content: '';
   position: absolute;
   bottom: 0;
   left: 0;
   width: 0%;
   height: 100%;
   background-color: #feb404;
-  transition: all 0.3s;
+  transition: all .3s;
   z-index: -1;
 }
 
@@ -288,11 +304,7 @@ nav {
   height: 40vh;
 }
 
-.icons .students,
-.staff,
-.nationalities,
-.educators,
-.ratio {
+.icons .students, .staff, .nationalities, .educators, .ratio {
   width: 20%;
   height: 100%;
 }
@@ -314,7 +326,7 @@ nav {
 }
 
 .ratio {
-  background-color: #366e83;
+   background-color: #366e83;
 }
 
 /* ABOUT PAGE */
@@ -396,21 +408,21 @@ nav {
   text-align: center;
   font-weight: 300;
   color: white;
-  transition: all 0.3s;
+  transition: all .3s;
   position: relative;
   overflow: hidden;
   z-index: 1;
 }
 
 .about-principal .principal-right .button::before {
-  content: "";
+  content: '';
   position: absolute;
   bottom: 0;
   left: 0;
   width: 0%;
   height: 100%;
   background-color: #feb404;
-  transition: all 0.3s;
+  transition: all .3s;
   z-index: -1;
 }
 
@@ -431,7 +443,7 @@ nav {
 .experience-left {
   width: 50%;
   height: 100%;
-  padding: 0 30px;
+  padding:0 30px;
 }
 
 .experience-left h2 {
@@ -598,7 +610,7 @@ nav {
   color: white;
   background-color: #0095c8;
   border-radius: 30px;
-  transition: all 0.3s;
+  transition: all .3s;
   position: relative;
   overflow: hidden;
   z-index: 1;
@@ -606,14 +618,14 @@ nav {
 
 .junior-container .junior-left .button::before,
 .senior-container .senior-right .button::before {
-  content: "";
+  content: '';
   position: absolute;
   bottom: 0;
   left: 0;
   width: 0%;
   height: 100%;
   background-color: #feb404;
-  transition: all 0.3s;
+  transition: all .3s;
   z-index: -1;
 }
 
@@ -747,7 +759,7 @@ nav {
 }
 
 .millicent-container .millicent-right p {
-  padding-top: 10px;
+  padding-top: 10px; 
 }
 
 .others-container {
@@ -764,6 +776,7 @@ nav {
   background-repeat: no-repeat;
   background-position: left;
   background-size: contain;
+
 }
 
 .others-container .others-left .others-left-left {
@@ -830,7 +843,7 @@ nav {
   padding: 10px 20px;
   background-color: #0095c8;
   color: white;
-  transition: all 0.3s;
+  transition: all .3s;
   position: relative;
   overflow: hidden;
   z-index: 1;
@@ -842,14 +855,14 @@ nav {
 
 .others-container .others-left .others-left-right .button::before,
 .others-container .others-right .others-right-right .button::before {
-  content: "";
+  content: '';
   position: absolute;
   bottom: 0;
   left: 0;
   width: 0%;
   height: 100%;
   background-color: #feb404;
-  transition: all 0.3s;
+  transition: all .3s;
   z-index: -1;
 }
 
@@ -881,21 +894,21 @@ nav {
   text-align: center;
   font-size: 15px;
   font-weight: 200;
-  transition: all 0.3s;
+  transition: all .3s;
   position: relative;
   overflow: hidden;
   z-index: 1;
 }
 
 .opportunities-container .vacancies::before {
-  content: "";
+  content: '';
   position: absolute;
   bottom: 0;
   left: 0;
   width: 0%;
   height: 100%;
   background-color: #feb404;
-  transition: all 0.3s;
+  transition: all .3s;
   z-index: -1;
 }
 
@@ -905,6 +918,7 @@ nav {
     width: 100%;
   }
 }
+
 
 /* CONTACT PAGE */
 .contact-header {
@@ -998,21 +1012,21 @@ nav {
   color: white;
   text-align: center;
   font-size: 14px;
-  transition: all 0.3s;
+  transition: all .3s;
   position: relative;
   overflow: hidden;
   z-index: 1;
 }
 
 .form-right .button::before {
-  content: "";
+  content: '';
   position: absolute;
   bottom: 0;
   left: 0;
   width: 0%;
   height: 100%;
   background-color: #feb404;
-  transition: all 0.3s;
+  transition: all .3s;
   z-index: -1;
 }
 
@@ -1035,17 +1049,12 @@ nav {
   padding: 0px 60px;
 }
 
-.footer-container .socials,
-.about,
-.curriculumn,
-.contact {
+.footer-container .socials, .about, .curriculumn, .contact {
   width: 25%;
   height: 100%;
 }
 
-.footer-container .about,
-.curriculumn,
-.contact {
+.footer-container .about, .curriculumn, .contact {
   text-align: center;
   padding-top: 50px;
 }
@@ -1061,237 +1070,13 @@ nav {
   gap: 12px;
 }
 
-.about h3,
-.curriculumn h3,
-.contact h3 {
+
+.about h3, .curriculumn h3, .contact h3 {
   font-family: "Philosopher", sans-serif;
   font-size: 20px;
   margin-bottom: 8px;
 }
 
-.about a,
-.curriculumn a,
-.contact p {
+.about a, .curriculumn a, .contact p {
   color: #828282;
-}
-
-/* RESPONSIVENESS */
-/* CAREERS PAGE */
-@media only screen and (max-width: 768px) {
-  /* CAREERS PAGE */
-  .careers-header {
-    background-image: url(/public/images/careers.jpeg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-  }
-
-  .careers-header .careers-right h1 {
-    text-align: center;
-    font-family: "Philosopher", sans-serif;
-    font-size: 25px;
-    padding-top: 50px;
-    color: #feb404;
-  }
-
-  .millicent-container {
-    display: flex;
-    width: 100%;
-    height: 70vh;
-  }
-
-  .millicent-container .millicent-left {
-    width: 30%;
-    height: 80%;
-    border-radius: 50%;
-    margin: 30px;
-    margin-left: 70px;
-    background-image: url(/public/images/millicent.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-  }
-
-  .millicent-container .millicent-right {
-    width: 50%;
-    height: 100%;
-    padding: 50px;
-  }
-
-  .millicent-container .millicent-right h1 {
-    font-family: "Philosopher", sans-serif;
-    font-size: 28px;
-    color: #a22c4e;
-  }
-
-  .millicent-container .millicent-right span {
-    font-size: 18px;
-    color: #e06287;
-  }
-
-  .millicent-container .millicent-right p {
-    padding-top: 10px;
-  }
-
-  .others-container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-  }
-
-  .others-container .others-left,
-  .others-container .others-right {
-    width: 100%;
-    height: 50vh;
-  }
-
-  .others-container .others-left,
-  .others-container .others-right {
-    background-size: cover;
-    background-position: center;
-  }
-
-  .others-container .others-left .others-left-left,
-  .others-container .others-left .others-left-right,
-  .others-container .others-right .others-right-left,
-  .others-container .others-right .others-right-right {
-    width: 100%;
-    height: 100%;
-  }
-
-  .others-container .others-left .others-left-right,
-  .others-container .others-right .others-right-right {
-    padding: 20px;
-  }
-
-  .others-container .others-left .others-left-right h2,
-  .others-container .others-right .others-right-right h2 {
-    font-family: "Philosopher", sans-serif;
-    font-size: 18px;
-    color: #a22c4e;
-  }
-
-  .others-container .others-left .others-left-right span,
-  .others-container .others-right .others-right-right span {
-    font-size: 14px;
-    color: #e06287;
-  }
-
-  .others-container .others-left .others-left-right p,
-  .others-container .others-right .others-right-right p {
-    padding-top: 10px;
-    padding-bottom: 30px;
-    font-size: 14px;
-  }
-
-  .others-container .others-right .others-right-right h2,
-  .others-container .others-right .others-right-right p {
-    padding-left: 30px;
-  }
-
-  .others-container .others-left .others-left-right .button,
-  .others-container .others-right .others-right-right .button {
-    display: inline-block;
-    margin-top: 25px;
-    padding: 10px 20px;
-    background-color: #0095c8;
-    color: white;
-    transition: all 0.3s;
-    position: relative;
-    overflow: hidden;
-    z-index: 1;
-  }
-
-  .others-container .others-left .others-left-right .button::before,
-  .others-container .others-right .others-right-right .button::before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 0%;
-    height: 100%;
-    background-color: #feb404;
-    transition: all 0.3s;
-    z-index: -1;
-  }
-
-  .others-container .others-left .others-left-right .button:hover,
-  .others-container .others-right .others-right-right .button:hover {
-    color: white;
-    &::before {
-      width: 100%;
-    }
-  }
-
-  .opportunities-container {
-    padding: 40px 20px;
-    text-align: center;
-    font-size: 18px;
-    background-color: #004c65;
-    color: white;
-  }
-
-  .opportunities-container p {
-    padding-bottom: 60px;
-  }
-
-  .opportunities-container .vacancies {
-    display: inline-block;
-    background-color: #0095c8;
-    padding: 8px 10px;
-    text-align: center;
-    font-size: 15px;
-    font-weight: 200;
-    transition: all 0.3s;
-    position: relative;
-    overflow: hidden;
-    z-index: 1;
-  }
-
-  .opportunities-container .vacancies::before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 0%;
-    height: 100%;
-    background-color: #feb404;
-    transition: all 0.3s;
-    z-index: -1;
-  }
-
-  .opportunities-container .vacancies:hover {
-    color: white;
-    &::before {
-      width: 100%;
-    }
-  }
-
-  /* Media Query for Small Screens */
-  @media only screen and (max-width: 768px) {
-    .millicent-container {
-      flex-direction: column;
-      height: auto;
-    }
-
-    .millicent-container .millicent-left {
-      width: 80%;
-      height: 40vh;
-      margin: 20px auto;
-    }
-
-    .millicent-container .millicent-right {
-      width: 80%;
-      padding: 20px;
-    }
-
-    .others-container .others-left,
-    .others-container .others-right {
-      height: 40vh;
-    }
-
-    .opportunities-container {
-      padding: 40px 10px;
-    }
-  }
 }
