--- a/src/responsive.css
+++ b/src/responsive.css
@@ -35,4 +35,94 @@ nav {
     opacity: 1;
     pointer-events: all;
 }
+
+/* FOOTER */
+.footer-container {
+    flex-direction: column;
+    height: auto;
+    padding: 20px;
+  }
+
+  .footer-container .socials, .about, .curriculumn, .contact {
+    width: 100%;
+    height: auto;
+    text-align: center;
+    padding-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .footer-container .socials .social-icons {
+    margin-left: 0;
+    margin-top: 0;
+    justify-content: center;
+  }
+
+  .about h3, .curriculumn h3, .contact h3 {
+    font-size: 16px;
+  }
+
+  /* ABOUT PAGE  */
+  .about-header {
+    display: flex;
+    width: 100%;
+    height: 80vh;
+    margin: 0;
+    padding: 0;
+  }
+
+  .about-header .about-left {
+    width: 60%;
+    height: 35%;
+  }
+
+  .about-header .about-right{
+    width: 35%;
+    height: 20%;
+    padding: 20px;
+    margin-left: -110px;
+  }
+
+  .about-header .about-right h1 {
+    font-size: 18px;
+  }
+
+  .about-principal h1{
+    font-size: 20px;
+    text-align: center;
+  }
+
+  .about-principal hr {
+    display: flex;
+    margin-left: 70px;
+  }
+
+  .principal-container {
+    display: block;
+  }
+
+  .about-principal .principal-left {
+    width: 100%;
+    height: 50%;
+    margin: 20px 0;
+  }
+
+  .about-principal .principal-right {
+    padding-left: 30px; 
+  }
+
+  .experience-container,
+  .deputy-container {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .experience-left,
+  .experience-right,
+  .deputy-container .deputy-left,
+  .deputy-container .deputy-right {
+    width: 100%;
+    height: 50%;
+    padding: 0 20px; 
+    margin: 20px 0;
+  }
 }
