--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,6 @@ nav {
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 0%;
   height: 100%;
   background-color: #feb404;
   transition: all .3s;
@@ -73,18 +72,6 @@ nav {
 
 
 /* HOME PAGE */
-.home-header,
-.about-header,
-.curriculumn-header,
-.careers-header,
-.contact-header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 95vh;
-}
-
 .home-header .home-left,
 .about-header .about-left,
 .curriculumn-header .curriculumn-left,
@@ -110,14 +97,12 @@ nav {
   padding: 50px;
 }
 
-.home-header .home-right h1,
-.about-header .about-right h1,
-.curriculumn-header .curriculumn-right h1 {
-  text-align: center;
-  font-family: "Philosopher", sans-serif;
-}
-
 .home-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 95vh;
   background-image: url('/public/images/home.jpeg');
   background-position: center;
   background-repeat: no-repeat;
@@ -128,6 +113,8 @@ nav {
   padding-top: 50px;
   font-size: 25px;
   color: #0095c8;
+  text-align: center;
+  font-family: "Philosopher", sans-serif;
 }
 
 .home-content1 {
@@ -172,75 +159,6 @@ nav {
   background-size: cover;
 }
 
-
-/* CAROUSEL */
-.carousel-item {
-  display: flex;
-}
-
-.item-content {
-  display: flex;
-  margin-top: 50px;
-  margin-left: 100px;
-}
-
-.circular-div {
-  width: 350px;
-  height: 350px;
-  border-radius: 50%;
-  margin-left: 100px;
-  margin-right: 100px;
-  border: 8px solid;
-  border-bottom-color: #004c65;
-  border-left-color: #7298a7;
-  border-top-color: #366e83;
-  border-right-color: white;
-  background-image: url(/public/images/home-carousel.jpeg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.circular-div2 {
-  width: 350px;
-  height: 350px;
-  border-radius: 50%;
-  margin-left: 100px;
-  margin-right: 100px;
-  border: 8px solid;
-  border-bottom-color: #feb404;
-  border-left-color: #fee7ae;
-  border-right-color: white;
-  border-top-color: #feb404;
-  background-image: url(/public/images/home.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.text-div {
-  max-width: 400px;
-  margin-top: 30px;
-}
-
-.text-div h2 {
-  font-family: "Philosopher", sans-serif;
-  font-size: 30px;
-}
-
-.text-div hr {
-  width: 90%;
-  height: 2px;
-  border: none;
-  margin: 5px 0;
-  background-color: #a22c4e;
-}
-
-.text-div p {
-  padding-top: 8px;
-  font-size: 16px;
-}
-
 .contact-us {
   height: 50vh;
   padding-top: 20px;
@@ -259,7 +177,7 @@ nav {
   width: 70%;
   height: 2px;
   border: none;
-  margin: 20px 150px;
+  margin: 20px 160px;
   background-color: white;
 }
 
@@ -337,6 +255,11 @@ nav {
 
 /* ABOUT PAGE */
 .about-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 95vh;
   background-image: url(/public/images/about.jpeg);
   background-repeat: no-repeat;
   background-position: center;
@@ -348,6 +271,7 @@ nav {
   font-size: 25px;
   padding-top: 30px;
   color: #feb404;
+  font-family: "Philosopher", sans-serif;
 }
 
 .about-principal h1 {
@@ -368,12 +292,12 @@ nav {
 .principal-container {
   display: flex;
   width: 100%;
-  height: 80vh;
+  height: 65vh;
 }
 
 .about-principal .principal-left {
   width: 30%;
-  height: 70%;
+  height: 80%;
   margin: 25px 150px;
   border-radius: 50%;
   background-image: url(/public/images/principal.jpeg);
@@ -388,15 +312,13 @@ nav {
 }
 
 .about-principal .principal-right p {
-  padding: 20px;
-  padding-left: 0;
-  margin-left: -50px;
-  font-size: 17px;
+  text-align: justify;
+  padding-top: 80px;
+  padding-right: 150px;
 }
 
 .about-principal .principal-right h2 {
-  margin-left: -50px;
-  padding-bottom: 20px;
+  padding-top: 30px;
   font-size: x-large;
   font-weight: bold;
 }
@@ -409,7 +331,7 @@ nav {
 .about-principal .principal-right .button {
   display: inline-block;
   padding: 10px 24px;
-  margin-left: -50px;
+  margin-top: 10px;
   background-color: #0095c8;
   text-align: center;
   font-weight: 300;
@@ -509,6 +431,11 @@ nav {
 
 /* CURRICULUMN PAGE */
 .curriculumn-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 95vh;
   background-image: url(/public/images/curriculumn.jpeg);
   background-repeat: no-repeat;
   background-position: center;
@@ -521,6 +448,7 @@ nav {
   text-align: center;
   margin-left: -10px;
   color: #e06287;
+  font-family: "Philosopher", sans-serif;
 }
 
 .junior-container {
@@ -715,6 +643,11 @@ nav {
 
 /* CAREERS PAGE */
 .careers-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 95vh;
   background-image: url(/public/images/careers.jpeg);
   background-repeat: no-repeat;
   background-position: center;
@@ -928,6 +861,11 @@ nav {
 
 /* CONTACT PAGE */
 .contact-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 95vh;
   background-image: url(/public/images/contact.jpeg);
   background-repeat: no-repeat;
   background-position: center;
@@ -1051,7 +989,7 @@ nav {
 .footer-container {
   display: flex;
   width: 100%;
-  height: 50vh;
+  height: 30vh;
   padding: 0px 60px;
 }
 
