--- a/src/responsive.css
+++ b/src/responsive.css
@@ -370,4 +370,42 @@
   .opportunities-container p {
     padding: 30px 30px;
   }
+
+  /* PRINCIPAL'S BIO PAGE */
+  .principal-page {
+    margin-bottom: 900px;
+  }
+
+  .principal-bio {
+    width: 100%;
+  }
+  .principal-bio h1 {
+    font-size: 25px;
+  }
+
+  .principal-bio .bio {
+    padding: 0px 25px;
+    font-size: 14px;
+  }
+
+  .principal-profile {
+    padding-top: 0;
+  }
+  
+  .principal-profile .profile-left {
+    display: none;
+  }
+  
+  .principal-profile .profile-right {
+    width: 90%;
+    height: 90%;
+    margin: 0;
+    background-color: #a22c4e;
+    border-radius: 50%;
+  }
+
+  .biography p {
+    padding: 5px 30px;
+    font-size: 15px;
+  }
 }
