--- a/src/responsive.css
+++ b/src/responsive.css
@@ -74,7 +74,9 @@
   }
 
   /* HOME PAGE */
-  .home-header, .contact-header, .careers-header {
+  .home-header,
+  .contact-header,
+  .careers-header {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -83,7 +85,9 @@
     background-position: 30%;
   }
 
-  .home-header .home-left, .contact-header .contact-left, .careers-header .careers-left{
+  .home-header .home-left,
+  .contact-header .contact-left,
+  .careers-header .careers-left {
     width: 70%;
     height: 40%;
     border: 8px solid rgba(255, 255, 255, 0.5);
@@ -91,14 +95,18 @@
     border-right-color: transparent;
   }
 
-  .home-header .home-right, .contact-header .contact-right, .careers-header .careers-right {
+  .home-header .home-right,
+  .contact-header .contact-right,
+  .careers-header .careers-right {
     width: 35%;
     height: 20%;
     margin-left: -110px;
     padding: 20px;
   }
 
-  .home-header .home-right h1, .contact-header .contact-right h1, .careers-header .careers-right h1 {
+  .home-header .home-right h1,
+  .contact-header .contact-right h1,
+  .careers-header .careers-right h1 {
     font-size: 18px;
     padding-top: 35px;
   }
@@ -315,7 +323,7 @@
     text-align: justify;
   }
 
-  .typical-day .h1{
+  .typical-day .h1 {
     height: 10vh;
     padding-top: 2px;
   }
@@ -325,10 +333,12 @@
     height: 20%;
   }
 
-  .grid-item-1, .grid-item-4, .grid-item-5, .grid-item-8 {
+  .grid-item-1,
+  .grid-item-4,
+  .grid-item-5,
+  .grid-item-8 {
     display: none;
   }
-
 
   /* CONTACT PAGE */
   .form-div .p {
@@ -372,31 +382,45 @@
   }
 
   /* PRINCIPAL'S BIO PAGE */
-  .principal-page {
+  .principal-page,
+  .hanna-page,
+  .tuuli-page {
     margin-bottom: 900px;
   }
 
-  .principal-bio {
+  .principal-bio,
+  .hanna-bio,
+  .tuuli-bio {
     width: 100%;
   }
-  .principal-bio h1 {
+  .principal-bio h1,
+  .hanna-bio h1,
+  .tuuli-bio h1 {
     font-size: 25px;
   }
 
-  .principal-bio .bio {
+  .principal-bio .bio,
+  .hanna-bio .bio,
+  .tuuli-bio .bio {
     padding: 0px 25px;
     font-size: 14px;
   }
 
-  .principal-profile {
+  .principal-profile,
+  .hanna-profile,
+  .tuuli-profile {
     padding-top: 0;
   }
-  
-  .principal-profile .profile-left {
+
+  .principal-profile .profile-left,
+  .hanna-profile .profile-left,
+  .tuuli-profile .profile-left {
     display: none;
   }
-  
-  .principal-profile .profile-right {
+
+  .principal-profile .profile-right,
+  .hanna-profile .profile-right,
+  .tuuli-profile .profile-right {
     width: 90%;
     height: 90%;
     margin: 0;
@@ -407,5 +431,25 @@
   .biography p {
     padding: 5px 30px;
     font-size: 15px;
+  }
+
+  /* VACANCIES PAGE */
+  .vacancy-container {
+    height: 80vh;
+  }
+
+  .vacancy-content {
+    width: 100%;
+    height: 100%;
+    padding-top: 160px;
+  }
+  .vacancy-content h1 {
+    font-size: 30px;
+  }
+
+  .vacancy-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
